[package]
name = "ads"
version = "0.1.0"
authors = ["Joe Doyle <joe@espressosys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
digest = "0.9.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

